# sui

./: Cargo.toml
crates/jarek-indexer/: Cargo.toml  diesel.toml
crates/jarek-indexer/src/: lib.rs  main.rs
crates/sui-deepbook-indexer/: config.yaml
crates/sui-deepbook-indexer/src/: schema.rs
crates/sui-deepbook-indexer/src/migrations/2025-01-06-072331_deepbook_setup/: up.sql
